Fixed text-align right bug

--- a/src/rateit.css
+++ b/src/rateit.css
@@ -35,6 +35,13 @@ div.rateit div.rateit-range
 div.rateit div.rateit-hover, div.rateit div.rateit-selected
 {
     position: absolute;
+    left: 0px;
+}
+
+div.rateit div.rateit-hover-rtl, div.rateit div.rateit-selected-rtl
+{
+    left: auto;
+    right: 0px;
 }
 
 div.rateit div.rateit-hover
